--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,37 +67,36 @@
 
 <body>
     <header>
-        <h1>Jane Doe</h1>
-        <p>Web Developer & Designer</p>
+        <h1>Andreas Sandnes</h1>
+        <p>Bioinformatics Software Engineer</p>
     </header>
     <main>
         <section>
-            <h2>About Me</h2>
+            <h2>Professional Summary</h2>
             <p>
-                Hi! I'm Jane, a passionate web developer specializing in building modern, responsive websites and
-                applications.
+                I'm a highly adaptable and solutions-driven Bioinformatics Software Engineer dedicated to
+                accelerating scientific discovery by building and automating robust data pipelines and
+                interactive tools that eliminate processing bottlenecks for biological researchers.
             </p>
         </section>
+
         <section class="projects">
             <h2>Projects</h2>
             <div class="project">
-                <span class="project-title">Personal Blog</span> -
-                <a href="#">View Project</a>
-                <p>A clean and simple blog platform built with HTML, CSS, and JavaScript.</p>
-            </div>
-            <div class="project">
-                <span class="project-title">Portfolio Website</span> -
-                <a href="#">View Project</a>
-                <p>My own portfolio showcasing my skills and previous work.</p>
+                <p>
+                    I am currently working on a portfolio of projects, where I showcase my
+                    skills and experience.
+                </p>
             </div>
         </section>
+
         <section>
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:jane.doe@email.com">jane.doe@email.com</a></p>
+            <p>Email: <a href="mailto:asandnes92@gmail.com">asandnes92@gmail.com</a></p>
         </section>
     </main>
     <footer>
-        &copy; 2024 Jane Doe
+        &copy; 2025 Andreas Sandnes
     </footer>
 </body>
 
