--- a/index.html
+++ b/index.html
@@ -5,64 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f4f4f4;
-            color: #333;
-        }
-
-        header {
-            background: #222;
-            color: #fff;
-            padding: 2rem 0;
-            text-align: center;
-        }
-
-        main {
-            max-width: 800px;
-            margin: 2rem auto;
-            background: #fff;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-        }
-
-        h1 {
-            margin-bottom: 0.5rem;
-        }
-
-        .projects {
-            margin-top: 2rem;
-        }
-
-        .project {
-            margin-bottom: 1.5rem;
-        }
-
-        .project-title {
-            font-weight: bold;
-        }
-
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background: #222;
-            color: #fff;
-            margin-top: 2rem;
-        }
-
-        a {
-            color: #0077cc;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -73,31 +16,38 @@
     <main>
         <section>
             <h2>Professional Summary</h2>
-            <p>
-                I'm a highly adaptable and solutions-driven Bioinformatics Software Engineer dedicated to
-                accelerating scientific discovery by building and automating robust data pipelines and
-                interactive tools that eliminate processing bottlenecks for biological researchers.
-            </p>
+            <div class="card">
+                <p>
+                    I'm a highly adaptable and solutions-driven Bioinformatics Software Engineer dedicated to
+                    accelerating scientific discovery by building and automating robust data pipelines and
+                    interactive tools that eliminate processing bottlenecks for biological researchers.
+                </p>
+            </div>
+
         </section>
 
         <section class="projects">
             <h2>Projects</h2>
             <div class="project">
                 <p>
-                    I am currently working on a portfolio of projects, where I showcase my
-                    skills and experience.
+                    I am currently working on my portfolio :)
                 </p>
             </div>
         </section>
 
         <section>
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:asandnes92@gmail.com">asandnes92@gmail.com</a></p>
+            <p></p>
+            <p></p>
+            <p></p>
         </section>
+
     </main>
+
     <footer>
-        &copy; 2025 Andreas Sandnes
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:asandnes92@gmail.com">asandnes92@gmail.com</a></p>
     </footer>
+
 </body>
 
 </html>
