added javascript code, added project_structure.txt

--- a/index.html
+++ b/index.html
@@ -2,52 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
-    <header>
-        <h1>Andreas Sandnes</h1>
-        <p>Bioinformatics Software Engineer</p>
-    </header>
-    <main>
-        <section>
-            <h2>Professional Summary</h2>
-            <div class="card">
-                <p>
-                    I'm a highly adaptable and solutions-driven Bioinformatics Software Engineer dedicated to
-                    accelerating scientific discovery by building and automating robust data pipelines and
-                    interactive tools that eliminate processing bottlenecks for biological researchers.
-                </p>
-            </div>
+  <header id="header"></header>
+  <main id="main"></main>
+  <footer id="footer"></footer>
 
-        </section>
-
-        <section class="projects">
-            <h2>Projects</h2>
-            <div class="project">
-                <p>
-                    I am currently working on my portfolio :)
-                </p>
-            </div>
-        </section>
-
-        <section>
-            <p></p>
-            <p></p>
-            <p></p>
-        </section>
-
-    </main>
-
-    <footer>
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:asandnes92@gmail.com">asandnes92@gmail.com</a></p>
-    </footer>
-
+  <script src="assets/js/app.js"></script>
 </body>
 
 </html>
